--- a/sign.html
+++ b/sign.html
@@ -31,18 +31,37 @@
         </div>
         <div class="sub-content">
             <div class="img">
-                <div class="img-text">
+                <div class="img-text m-up">
                     <h2>new here?</h2>
                     <p>Sign up!</p>
                 </div>
-                <div class="img-text">
+                <div class="img-text m-in">
                     <h2>One of Us?</h2>
                     <p>Sign in!</p>
                 </div>
                 <div class="img-btn">
-                    <spam class="m-up">Sign Up</spam>
-                    <spam class="m-in">Sign In</spam>
-                </div>
+                    <span class="m-up">Sign Up</span>
+                    <span class="m-in">Sign In</span>
+                  </div>
+            </div>
+            <div class="form sign-up">
+                <label>
+                    <span>Name</span>
+                    <input type="text">
+                </label>
+                <label>
+                    <span>Email</span>
+                    <input type="email">
+                </label>
+                <label>
+                    <span>Password</span>
+                    <input type="password">
+                </label>
+                <label>
+                    <span>Confirm Password</span>
+                    <input type="password">
+                </label>
+               <button type="button" class="submit">Sign Up</button>
             </div>
         </div>
     </section>
