--- a/sign.html
+++ b/sign.html
@@ -55,11 +55,11 @@
                 </label>
                 <label>
                     <span>Password</span>
-                    <input type="password">
+                    <input type="password" id = "input_senha">
                 </label>
                 <label>
                     <span>Confirm Password</span>
-                    <input type="password">
+                    <input type="password" id = "input_senha_confirm">
                 </label>
                <button type="button" class="submit">Sign Up</button>
             </div>
